--- a/KPEngine_Test/KPEngine_Test.vcxproj.filters
+++ b/KPEngine_Test/KPEngine_Test.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClCompile Include="KPMatrix4x4_UnitTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CollisionStress_UnitTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Library Include="Externals\HeapManager-Debug-x64.lib" />
