--- a/KPEngine/KPEngine.vcxproj
+++ b/KPEngine/KPEngine.vcxproj
@@ -180,7 +180,10 @@
     <ClInclude Include="include\KPEngine-init.h" />
     <ClInclude Include="include\Utils\FileIO.h" />
     <ClInclude Include="include\Utils\KPLogType.h" />
+    <ClInclude Include="include\Utils\KPMatrix4x4SSE.h" />
     <ClInclude Include="include\Utils\KPVector3.h" />
+    <ClInclude Include="include\Utils\KPVector3SSE.h" />
+    <ClInclude Include="include\Utils\KPVector4SSE.h" />
     <ClInclude Include="include\Utils\KP_Log.h" />
     <ClInclude Include="include\Utils\List.h" />
     <ClInclude Include="include\Utils\KPString.h" />
@@ -222,10 +225,13 @@
     <ClCompile Include="src\Core\HeapManager\MemorySystem.cpp" />
     <ClCompile Include="src\KPEngine-init.cpp" />
     <ClCompile Include="src\Physics\PhysicsSystem.cpp" />
+    <ClCompile Include="src\Utils\KPMatrix4x4SSE.cpp" />
     <ClCompile Include="src\Utils\KPString.cpp" />
     <ClCompile Include="src\Utils\KPVector2.cpp" />
     <ClCompile Include="src\Utils\KPVector3.cpp" />
+    <ClCompile Include="src\Utils\KPVector3SSE.cpp" />
     <ClCompile Include="src\Utils\KPVector4.cpp" />
+    <ClCompile Include="src\Utils\KPVector4SSE.cpp" />
     <ClCompile Include="src\Utils\KP_Log.cpp" />
     <ClCompile Include="src\Core\Time\TimeSystem.cpp" />
   </ItemGroup>
