Broke apart Physics Step into two to account for collision velocity conditions. Resolves Acceleration Calculation Post Collision Issue
Added A whole bunch of boiler plate code for things I might need to make the game
Added to build Death Platform.

--- a/PlatformerGame/PlatformerGame.vcxproj
+++ b/PlatformerGame/PlatformerGame.vcxproj
@@ -195,6 +195,7 @@
     <ClCompile Include="src\GameMain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\src\DeathPlatform.lua" />
     <None Include="Assets\src\Monster.lua" />
     <None Include="Assets\src\Platform.lua" />
     <None Include="Assets\src\Player.lua" />
