--- a/PlatformerGame/PlatformerGame.vcxproj.filters
+++ b/PlatformerGame/PlatformerGame.vcxproj.filters
@@ -58,5 +58,6 @@
     <None Include="Assets\src\Player.lua" />
     <None Include="Assets\src\Monster.lua" />
     <None Include="Assets\src\Platform.lua" />
+    <None Include="Assets\src\DeathPlatform.lua" />
   </ItemGroup>
 </Project>
