Added Key to Win Logic finishing loop

--- a/PlatformerGame/PlatformerGame.vcxproj
+++ b/PlatformerGame/PlatformerGame.vcxproj
@@ -196,6 +196,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\src\DeathPlatform.lua" />
+    <None Include="Assets\src\KeyToWin.lua" />
     <None Include="Assets\src\Monster.lua" />
     <None Include="Assets\src\Platform.lua" />
     <None Include="Assets\src\Player.lua" />
