--- a/PlatformerGame/PlatformerGame.vcxproj.filters
+++ b/PlatformerGame/PlatformerGame.vcxproj.filters
@@ -61,5 +61,6 @@
     <None Include="Assets\src\DeathPlatform.lua" />
     <None Include="Assets\src\Text_Win.lua" />
     <None Include="Assets\src\Text_Enter.lua" />
+    <None Include="Assets\src\KeyToWin.lua" />
   </ItemGroup>
 </Project>
