--- a/KPEngine/KPEngine.vcxproj
+++ b/KPEngine/KPEngine.vcxproj
@@ -162,6 +162,7 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\Graphics\CameraComponent.h" />
     <ClInclude Include="include\Utils\Delegates.h" />
     <ClInclude Include="include\Collision\BoxCollisionComponent.h" />
     <ClInclude Include="include\Collision\CollisionSystem.h" />
@@ -202,6 +203,7 @@
     <ClInclude Include="include\Messaging\MessagingSystem.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Graphics\CameraComponent.cpp" />
     <ClCompile Include="src\Messaging\MessagingSystem.cpp" />
     <ClCompile Include="src\Collision\BoxCollisionComponent.cpp" />
     <ClCompile Include="src\Collision\CollisionSystem.cpp" />
